当前：1、新增hit、area和sort；2、修订单元测试以适配新增对象 计划： 1、hit.fields、sort.afterDegree实现 2、select从search中独立出来 3、小型集群支持 长期： 1、作为日志收集器进行长期技术验证 2、完善文档